# cs225a

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REPRODUCE.md  RESULTS.md
.github/workflows/: ci.yml
configs/: peg_in_hole.yaml
docs/: control_design.md  decisions.md  design_decisions.md  proposal.md  sensor_attention_theory.md
include/pvs/: eye_in_hand.h  forward_model.h  osc.h  redis_interface.h  sensor_attention.h
python/: modal_results.py  real_pybullet.py  real_pybullet_osc.py
python/analysis/: aggregate.py  stats.py  test_stats.py
results/: README.md  beta_sweep.csv  dropout_sweep.csv  horizon_sweep.csv  oracle_match.csv  per_phase.csv  regret_vs_oracle.csv  traces.csv
results/real_pybullet/: README.md  osc_v3.json  peg_in_hole_summary.json  peg_in_hole_v2.json  run_log.md
scripts/: run_all_experiments.sh  smoke_pipeline.sh
src/: run_sim.cpp
src/controllers/: osc.cpp  sensor_attention.cpp
src/utils/: forward_model.cpp  redis_interface.cpp
src/vision/: eye_in_hand.cpp
tests/: CMakeLists.txt  test_forward_model.cpp  test_integration.cpp  test_osc.cpp  test_sensor_attention.cpp
world/: peg_in_hole.urdf
